objects/mcdm_15__GreetingMapping__c.object
<CustomObject>
    <description>Maps greeting options to object fields.</description>
    <fields>
        <fullName>mcdm_15__FieldName__c</fullName>
        <description>The field on the object whos value will be used.</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__GreetingLabel__c</fullName>
        <description>User entered label for the greeting option.</description>
        <label>Greeting Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ObjectType__c</fullName>
        <description>The type of object the source field is on.</description>
        <label>Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Greeting Mapping</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Greeting Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Greeting Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>